# writform

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: ci.yml  docs.yml  release.yml
apps/desktop/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/public/: manifest.webmanifest
apps/desktop/src/: Root.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: att_protocol.rs  host.rs  lib.rs  localdocs.rs  main.rs  media.rs  net.rs  plugins.rs  profile.rs  servers.rs  vault.rs  wsclient.rs
apps/desktop/src-tauri/src/commands/: api.rs  connect.rs  mod.rs
apps/desktop/src-tauri/tests/: e2e_connect.rs  host_flow.rs
apps/desktop/src/apps/canvas/: BoardRoom.tsx  CanvasView.tsx  api.ts  index.tsx  store.ts
apps/desktop/src/apps/chat/: ChatView.tsx  GroupChip.tsx  MessageText.tsx  VideoStage.tsx  api.ts  index.tsx  store.ts  voice.ts
apps/desktop/src/apps/docs/: index.tsx
apps/desktop/src/apps/documents/: CanvasDocCard.tsx  DocumentEditor.tsx  DocumentsView.tsx  FeedbackPanel.tsx  FindBar.tsx  LocalDocumentEditor.tsx  OutlinePanel.tsx  SendToCanvasDialog.tsx  ShareDialog.tsx  ShareLocalDialog.tsx  SharePicker.tsx  VersionHistoryPanel.tsx  api.ts  collab.ts  export.ts  exportAll.ts  index.tsx  local.ts  store.ts
apps/desktop/src/apps/documents/formats/: DocElement.ts  FormatKeymap.ts  elements.ts
apps/desktop/src/apps/documents/import/: importFile.ts  pdf.ts  rtf.ts
apps/desktop/src/apps/friends/: FriendsView.tsx  index.tsx  store.ts
apps/desktop/src/apps/hello/: index.tsx
apps/desktop/src/apps/notes/: NotesView.tsx  index.tsx  markdown.ts
apps/desktop/src/apps/pluginmanager/: index.tsx
apps/desktop/src/apps/sessions/: SessionsView.tsx  api.ts  index.tsx  store.ts
apps/desktop/src/apps/settings/: index.tsx
apps/desktop/src/bindings/proto/: AdminStats.ts  AdminUser.ts  ApiError.ts  AppendUpdateRequest.ts  AppendUpdateResponse.ts  AttachmentId.ts  AttachmentMeta.ts  AuthResponse.ts  AwarenessRequest.ts  BoardDetail.ts  CanvasBoard.ts  CanvasElement.ts  Channel.ts  ChannelKind.ts  ClientFrame.ts  CreateBoardRequest.ts  CreateChannelRequest.ts  CreateDocumentRequest.ts  CreateElementRequest.ts  CreateEmoteRequest.ts  CreateFolderRequest.ts  CreateGroupRequest.ts  CreateInviteRequest.ts  CreatePromptRequest.ts  CreateSessionRequest.ts  CreateThreadRequest.ts  CreateVoiceChannelRequest.ts  DeviceSession.ts  DmChannel.ts  Document.ts  DocumentActivity.ts  DocumentDetail.ts  DocumentFolder.ts  DocumentListItem.ts  DocumentShare.ts  DocumentThread.ts  DocumentThreadMessage.ts  DocumentUpdateBatch.ts  DocumentUpdateRow.ts  DocumentVersion.ts  (+59 more)
apps/desktop/src/connect/: ConnectScreen.tsx
apps/desktop/src/editor/: RichEditor.tsx
apps/desktop/src/lib/: backend.ts  camera.ts  devPreview.ts  linkPreview.ts  microphone.ts  notifPrefs.ts  notifications.ts  portableProfile.ts  publicIp.ts  upload.ts  useSwipe.ts  voiceSettings.ts  webBackend.ts  wordCount.ts
apps/desktop/src/platform/: AppShell.tsx  Avatar.tsx  CommandPalette.tsx  Loading.tsx  Modal.tsx  ProfileCard.tsx  Slot.tsx  confirm.tsx  index.ts  lightbox.tsx  pluginHost.ts  registry.ts  resync.ts  toast.tsx  types.ts
apps/desktop/src/stores/: session.ts
apps/desktop/tmp-data/: identity.key  tls-cert.pem  tls-key.pem
crates/writform-crypto/: Cargo.toml
crates/writform-crypto/src/: identity.rs  lib.rs  password.rs  token.rs
crates/writform-proto/: Cargo.toml
crates/writform-proto/src/: api.rs  canvas.rs  chat.rs  documents.rs  friends.rs  ids.rs  lib.rs  sessions.rs  voice.rs  ws.rs
crates/writform-server/: Cargo.toml
crates/writform-server/migrations/: 0001_init.sql  0002_canvas.sql  0003_voice.sql  0004_user_accent.sql  0005_group_icon.sql  0006_group_accent.sql  0007_user_status.sql  0008_user_bio.sql  0009_canvas_style.sql  0010_documents.sql  0011_document_history.sql  0012_folders_and_reset.sql  0013_reactions.sql  0014_user_banner.sql  0015_group_join_code.sql
crates/writform-server/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  perms.rs  serve.rs  tls.rs  ws.rs
crates/writform-server/src/routes/: admin.rs  attachments.rs  auth.rs  canvas.rs  channels.rs  documents.rs  emotes.rs  friends.rs  groups.rs  healthz.rs  identity.rs  link_preview.rs  messages.rs  mod.rs  notes.rs  plugin_data.rs  sessions.rs  users.rs  voice.rs
crates/writform-server/tests/: admin_flow.rs  auth_flow.rs  canvas_flow.rs  chat_flow.rs  customization_flow.rs  documents_flow.rs  friends_flow.rs  link_preview_flow.rs  plugin_data_flow.rs  session_flow.rs  tls_identity.rs  voice_flow.rs
deploy/: writform-server.service
docs/: canvas-plan.md  crypto.md  plugin-api.md  protocol.md
docs-site/: mkdocs.yml
docs-site/docs/: endpoints.md  features.md  how-to.md  index.md  networking.md  plugins.md  setup.md
examples/plugins/wf-llama/: README.md  main.js  manifest.json
examples/plugins/wf-scratchpad/: main.js  manifest.json
scripts/: Build WritForm (macOS).command  Build subScribe (macOS).command
