[package]
name = "writform-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ml-dsa = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
pbkdf2 = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
