[package]
name = "writform-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
writform-proto = { workspace = true }
writform-crypto = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
axum-server = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
x509-parser = { workspace = true }
base64 = { workspace = true }
futures-util = "0.3"
rand = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
infer = "0.16"
# Outbound fetch for canvas link previews (webpki roots: verifies public TLS).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json", "multipart"] }
tempfile = "3"
tokio-tungstenite = "0.26"
