[package]
name = "writform-desktop"
description = "WritForm desktop client (Tauri core)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "writform_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
writform-proto = { workspace = true }
writform-crypto = { workspace = true }
writform-server = { path = "../../../crates/writform-server" }

tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots", "json", "multipart"] }
rustls = { workspace = true }
x509-parser = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# "Host on this computer": LAN interface discovery + router UPnP port mapping.
if-addrs = "0.15"
igd-next = { version = "0.17", features = ["aio_tokio"] }

# macOS microphone authorization: WKWebView never raises the system prompt on
# its own, so voice asks AVFoundation directly (see src/media.rs).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"

[dev-dependencies]
rcgen = { workspace = true }
axum-server = { workspace = true }
tempfile = "3"
